--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,11 @@ body,
 .leaflet-top {
   z-index: 0 !important;
 }
+
+.rdrMonth{
+  width: 100% !important;
+}
+.rdrCalendarWrapper {
+  font: 16px !important;
+  width: 100% !important;
+}
